--- a/public/components/tabs.html
+++ b/public/components/tabs.html
@@ -11,6 +11,9 @@
 	<link href="/omni-cms/fontawesome/css/all.min.css" rel="stylesheet"/>
 
 	<script defer src='/omni-cms/components.js'></script>
+    <script>
+        var mc_css = "/omni-cms/app.css"
+    </script>
 </head>
 
 <body class="h-screen bg-white w-full flex flex-col items-center">
