--- a/public/components/tabs.html
+++ b/public/components/tabs.html
@@ -7,12 +7,12 @@
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link href="/omni-cms/app.css" rel="stylesheet">
+	<link href="/omni-cms/main.css" rel="stylesheet">
 	<link href="/omni-cms/fontawesome/css/all.min.css" rel="stylesheet"/>
 
 	<script defer src='/omni-cms/components.js'></script>
     <script>
-        var mc_css = "/omni-cms/app.css"
+        var mc_css = "/omni-cms/main.css"
     </script>
 </head>
 
@@ -39,7 +39,7 @@
         </mc-tabs>
 
     <mc-tabs class="m-10 shadow-xl">
-        <ul class="flex flex-row w-full justify-center items-center">
+        <ul class="flex flex-row w-full justify-center items-center list-none">
             <li>
                 <mc-tab name="test0">test0</mc-tab>
             </li>
