--- a/public/components/galleries.html
+++ b/public/components/galleries.html
@@ -7,7 +7,7 @@
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link href="/omni-cms/app.css" rel="stylesheet">
+	<link href="/omni-cms/main.css" rel="stylesheet">
 	<link href="/omni-cms/fontawesome/css/all.min.css" rel="stylesheet"/>
 
 	<script defer src='/omni-cms/components.js'></script>
@@ -23,7 +23,7 @@
 		<section class="bg-white w-full max-w-7xl h-auto flex flex-row my-5">
 			<mc-gallery 
 				data='[{"url":"/img/really.jpg","title":"SEE GU","description":"Cant visit the campus in person? Take a virutal tour!"},{"url":"/img/thoughtful.jpg","title":"APPLY TODAY","description":"Your education is an investment for the future"},{"url":"/img/wow.jpg","title":"MAJOR FAIR","description":"Explore and learn where your major can take you"}]' 
-				class="w-full"
+				class="w-full bg-primary bg-opacity-70"
 			></mc-gallery>
 		</section>
 	</mc-card>
