--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -2,26 +2,43 @@
 @tailwind utilities;
 @tailwind components;
 
-a{
-    @apply text-secondary
+body {
+    /* bg color, text color, font fam, font size, font weight, letter spacing, line height */
+    @apply bg-default text-default font-body text-base font-normal tracking-normal leading-normal;
 }
 
-footer li a{
-    @apply text-white hover:text-secondary hover:underline
+h1, h2, h3, h4, h5, h6 {
+    @apply font-heading font-bold;
 }
 
-.fa,.fab {
-    @apply text-secondary p-2
+h1 {
+    @apply text-5xl;
+}
+h2 {
+    @apply text-4xl;
+}
+h3 {
+    @apply text-3xl;
+}
+h4 {
+    @apply text-2xl;
+}
+h5 {
+    @apply text-lg;
+}
+h6 {
+    @apply text-base;
 }
 
-.bars li+li { 
-    @apply border-l border-primary border-solid;
+a {
+    @apply text-link;
 }
 
-.sidenav li{
-    @apply p-2 text-secondary hover:bg-primary hover:text-white
+hr {
+    width: 100%;
+    height: 1px;
 }
 
-.sidenav li:hover a {
-    @apply text-current
+ul, li, blockquote {
+        all: revert;
 }
